# NewCppTask

./: CMakeLists.txt
251001-001123-uno_r4_minima/src/: debug_custom.json  sketch_ControllerTest.cpp
251001-001123-uno_r4_minima/src/.theia/: launch.json
App/: CMakeLists.txt  main.cpp  prephral_asbtract.hpp  sketch_ControllerTest.cpp
App/Abstract/: CMakeLists.txt  prephral_asbtract.hpp  prephral_config.hpp
App/Lib/Ponoor/: CMakeLists.txt  PiFracMotor.cpp  PiFracMotor.h  Ponoor_L6470Commands.cpp  Ponoor_L6470Config.cpp  Ponoor_L6470Library.cpp  Ponoor_L6470Library.h  Ponoor_L6470Support.cpp  test.cpp  test.h
App/Lib/Ponoor/Abstract/: prephral_asbtract.hpp  prephral_config.hpp
Lib/: CMakeLists.txt  PiFracMotor.cpp
Ponoor_L6470_Library-main/examples/SparkFunGetSetParamTest/: SparkFunGetSetParamTest.ino
Ponoor_L6470_Library-main/src/: PiFracMotor.h  Ponoor_L6470Support.cpp
